# 51MathModel2

./: $null  .gitignore  check_env.py  mv.ps1  pyproject.toml  temp.md  temp2.md  未命名.md
Q1/: Q1.m  Q1.md  analyze.m  correct.m  correct_and_test.m  filter.m
Q1/结果与使用指南/: 1）数据清洗报告.md  2）偏差类型报告.md  3）校正模型报告.md  4）模型评估报告.md  Q1总指南.md  附：解释图2的频谱.md
Q2/: Assumption1_Params.xlsx  Filter.m  Filtered 2.xlsx  Filtered_Result.csv  Fourier.m  Q2.m  V_A_filtered.csv  appendix2.py  appendix2_k.py  config.py  denoise_test.py  detect_nodes.py  explore_raw.py  interp_info.py  modeling.py  plotting.py  preprocess.py  run_pipeline.py  smh 理解.md  stage_recognition.py  velocity.py  问题2.md
Q2/结果与使用指南/: 1）数据清洗报告.md  2）阶段转换节点检测报告.md  3）三段式形变建模报告.md  4）模型评估报告.md  Q2总指南.md  附：依据速度分段，依据位移拟合.md
Q2_mat/: 1）数据清洗报告.md  Assumption2_ModelDisplacement.xlsx  Assumption_1.m  Assumption_2.m  Differentiate.m  Filter.m  Q2总指南（手写稿，供5月2日早临时参考）.md  V_A_filtered.csv
Q2_mat - 副本/: Assumption2_ModelDisplacement.xlsx  Assumption_2.asv  Assumption_2.m  Differentiate.asv  Differentiate.m  Filter.m  V_A_filtered.csv
Q2_py/: Filtered 2.xlsx  detect_nodes.py  explore_raw.py  modeling.py  preprocess.py  smooth.py  重构指南.md
Q2_py/结果与使用指南/: 4）模型评估报告.md  Q2总指南.md  问题2.md
Q3/: 3.2.py  3.3.py  5dimensions_diagnosis.py  Q3.py  Q3总指南.md  common_outliers_table3.2.xlsx  experimental_set_predictions.xlsx  test.py  training_set_cleaned.xlsx  关于3.3.py的图解.md  总指南.md
Q3/3.1/: 1）数据清洗报告.md  3.1.py  Filter_GAUSS.py  Filter_SG.py  Fourier.py  exp_denoised.xlsx  exp_smoothed.xlsx  train_denoised.xlsx  train_smoothed.xlsx  welch_spectrum.m
Q3/3.2/: 2）异常检测报告.md  3.2.py  common_outlier.py  common_outlier_summary.xlsx  common_outliers_table3.2.xlsx  common_outliers_table3.2_temp.xlsx  detective.py  table3.1_outlier_counts.xlsx  table3.1_outlier_counts_temp.xlsx  共同异常点统计汇总.xlsx  关于3.2.py的表格注解.md  表3.1_单变量异常点统计.xlsx  表3.2_共同异常点清单.xlsx
Q3/3.3/: 3.3.py  3）回归分析报告.md  Regression.py  experimental_set_predictions.xlsx  实验集表面位移预测.xlsx
Q3_0/: Assumption1_Params.xlsx  Filter.m  Filter2.m  Filtered_Result.csv  V_A_filtered.csv
Q3_1/3.1/: exp_denoised.xlsx  train_denoised.xlsx
Q3_1/3.2/: 3.2.py  common_outliers_table3.2.xlsx  table3.1_outlier_counts.xlsx
Q3_1/3.3/: 关于3.3.py的图解.md
Q4/4.1/: Filter.m  V_A_filtered.csv  ap4_stage.xlsx
Q4/4.2/: Filter_ap4.py  ap4_denoise.xlsx
Q4/4.4/: ap4_features.xlsx  seg1_features.xlsx  seg2_features.xlsx  (+1 more)
Q4_0/: 111.md  Assumption1_Params.xlsx  Assumption_1.m  Assumption_2.m  Assumption_3.m  Denoise_test.m  Differentiate.m  Filter.m  Filter2.m  Filtered_Result.csv  V_A_filtered.csv  ~$问题四.docx  问题四.docx
Q4_LGBM/: ablation.py  feature_importance.csv  result_table.csv  solve_q4.py  visualization.py
Q4_fast/: Q4.py  feature.py
Q5/: q5_main.py
Q5_0/: rainfall_ablation.py  test.py  test_v2.py  算法分析与改进方案.md
原题/: Question.md  Refined.md
规划/: 安排.md  环境.md  简讯.md  选题.md
(+94 files in other folders)
