[project]
name = "mcm2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.4.0",
    "anyio>=4.13.0",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "arrow>=1.4.0",
    "asttokens>=3.0.1",
    "async-lru>=2.3.0",
    "attrs>=26.1.0",
    "babel>=2.18.0",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "cffi>=2.0.0",
    "comm>=0.2.3",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "executing>=2.2.1",
    "fastjsonschema>=2.21.2",
    "fqdn>=1.5.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipython-pygments-lexers>=1.1.1",
    "ipywidgets>=8.1.8",
    "isoduration>=20.11.0",
    "jedi>=0.19.2",
    "json5>=0.14.0",
    "jsonpointer>=3.1.1",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.8.0",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.9.1",
    "jupyter-events>=0.12.1",
    "jupyter-lsp>=2.3.1",
    "jupyter-server>=2.17.0",
    "jupyter-server-terminals>=0.5.4",
    "jupyterlab>=4.5.7",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.28.0",
    "jupyterlab-widgets>=3.0.16",
    "lark>=1.3.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "matplotlib-venn>=1.1.2",
    "mistune>=3.2.0",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "notebook>=7.5.6",
    "notebook-shim>=0.2.4",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "padasip>=1.2.2",
    "pandas>=3.0.0",
    "pandocfilters>=1.5.1",
    "parso>=0.8.6",
    "platformdirs>=4.9.6",
    "prometheus-client>=0.25.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "pure-eval>=0.2.3",
    "pycparser>=3.0",
    "pygments>=2.20.0",
    "python-json-logger>=4.1.0",
    "pywinpty>=3.0.3",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "referencing>=0.37.0",
    "requests>=2.32.5",
    "rfc3339-validator>=0.1.4",
    "rfc3986-validator>=0.1.1",
    "rfc3987-syntax>=1.1.0",
    "rpds-py>=0.30.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0,<1.17",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
    "send2trash>=2.1.0",
    "soupsieve>=2.8.3",
    "stack-data>=0.6.3",
    "statsmodels>=0.14.6",
    "terminado>=0.18.1",
    "tinycss2>=1.4.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tornado>=6.5.5",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "uri-template>=1.3.0",
    "wcwidth>=0.6.0",
    "webcolors>=25.10.0",
    "webencodings>=0.5.1",
    "websocket-client>=1.9.0",
    "widgetsnbextension>=4.0.15",
]
[tool.uv]
index-strategy = "unsafe-best-match"
